# flask_example

./: pyproject.toml
.github/workflows/: main.yaml
flask_example/: app.py
tests/: test_app.py
